branches/0.3/src/objects/TeamType__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <label>PageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Team Type</label>
    <nameField>
        <label>TeamType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>